--- a/Laminal/Shared/Laminal.Shared.csproj
+++ b/Laminal/Shared/Laminal.Shared.csproj
@@ -8,8 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="7.0.2" />
-    <PackageReference Include="Stl.Fusion" Version="4.3.2" />
+    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="7.0.4" />
+    <PackageReference Include="Stl.Fusion" Version="5.1.6" />
+    <PackageReference Include="Stl.Generators" Version="5.1.6" />
   </ItemGroup>
 
   <ItemGroup>
